client/src/styles/components/alert.module.css
.custom-alert {
  width: 45vw;
  min-width: 300px;
  max-width: 600px;
  background: rgb(65, 65, 65);
  padding: 20px;
  min-height: max-content;

  top: -100vw;
  height: 150px;

  border-radius: 5px 5px 5px 5px;

  /*centering it*/
  position: fixed;
  margin-left: auto;
  margin-right: auto;
  left: 0;
  right: 0;
  display: block;
}

.screen-cover {
  width: 100%;
  height: 100%;
  position: fixed;
  cursor: not-allowed;
  z-index: -10;
  opacity: 0;
  background-color: #1a1a1a94;
  transition: 0.15s;
}
.screen-cover.active {
  opacity: 1;
  z-index: 10000000000000;
  transition: 0.15s;
}

.custom-alert .alert-content .alert-paragraph {
  font-size: 7px;
  color: rgb(212, 212, 212);
}

.alert-active {
  top: 20px;
  transition: 0.15s;
  z-index: 10000000000001;
}

.alert-inactive {
  top: -100vw;
  transition: 0.15s;
}

.custom-alert .close-icon {
  width: 45px;
  height: 45px;
  float: right;
  position: relative;
  display: block;
  transition: 0.4s;
  border-radius: 100vw;
  padding: 5px;
  fill: white;
}

.custom-alert .close-icon:hover {
  background-color: rgba(255, 255, 255, 0.356);
}

.custom-alert .alert-content .alert-sign {
  width: 40px;
  height: 40px;
  margin-right: 20px;
  margin-left: 10px;
}

.custom-alert .alert-content .alert-text {
  margin-top: 10px;
}

.custom-alert .alert-content {
  display: flex;
  justify-content: flex-start;
  height: max-content;
  align-items: center;
}

